objects/Obj33__c.object
<CustomObject>
    <description>gdgdfgd</description>
    <fields>
        <fullName>Fld33__c</fullName>
        <label>Fld33</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFieldProfile2__c</fullName>
        <label>TestFieldProfile2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFieldProfile3__c</fullName>
        <label>TestFieldProfile3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFieldProfile4__c</fullName>
        <label>TestFieldProfile4</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testField7__c</fullName>
        <label>testField7</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Obj33</label>
    <nameField>
        <label>Obj33 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj33s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>